# verticalbarchart

./: README.md  demo.py  pyproject.toml
vbchart/: __init__.py
