[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verticalbarchart"
version = "0.1.0"
description = "ANSI-capable vertical bar charts for terminal output"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dylan Doxey" }
]
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[tool.setuptools]
packages = ["vbchart"]
